--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>Hola Mundo</h1>
     <p>Esta es mi primera pagina</p>
+    <pre>texto de ejemplo</pre>
 <!-- 
     <ul>
         <li></li>
